# BlackHoleSFML

./: BlackHole.cpp  BlackHole.h  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  ObjectData.h  README.md  main.cpp
shaders/: blit.fraq  blit.shader.h  geodesic.comp  geodesic.shader.h  grid.shader.h
